--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,18 +76,24 @@ x-airflow-common:
 
 services:
   postgres:
-    image: postgres:13
+    image: postgres:12-alpine
     environment:
-      POSTGRES_USER: airflow
-      POSTGRES_PASSWORD: airflow
-      POSTGRES_DB: airflow
+      - POSTGRES_USER=airflow
+      - POSTGRES_PASSWORD=airflow
+      - POSTGRES_DB=airflow
+    ports:
+      - "5432:5432"
+
+  wiki_results:
+    image: postgres:12-alpine
+    environment:
+      - POSTGRES_USER=airflow
+      - POSTGRES_PASSWORD=airflow
+      - POSTGRES_DB=airflow
+    ports:
+      - "5433:5432"
     volumes:
-      - postgres-db-volume:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD", "pg_isready", "-U", "airflow"]
-      interval: 5s
-      retries: 5
-    restart: always
+      - ./scripts/create_table.sql:/docker-entrypoint-initdb.d/create_table.sql
 
   redis:
     image: redis:latest
